--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1922,11 +1922,11 @@
         "conteo_tienda4 = obtener_productos_mas_menos_vendidos(tienda4, \"4\")"
       ],
       "metadata": {
-        "id": "j80rUIWSBqqc",
-        "outputId": "5ba91e61-2b12-43f8-876e-6d11775be1b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j80rUIWSBqqc",
+        "outputId": "5ba91e61-2b12-43f8-876e-6d11775be1b9"
       },
       "execution_count": 24,
       "outputs": [
@@ -2013,12 +2013,12 @@
         "    plt.show()"
       ],
       "metadata": {
-        "id": "pY6LZqlLDg4t",
-        "outputId": "6f984ab2-f0e0-42d4-f182-6be242b925df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "pY6LZqlLDg4t",
+        "outputId": "6f984ab2-f0e0-42d4-f182-6be242b925df"
       },
       "execution_count": 30,
       "outputs": [
@@ -2085,11 +2085,11 @@
         "    print(f\"{nombres_tiendas[i]}: Costo de envío promedio = ${costo_promedio:.2f}\")"
       ],
       "metadata": {
-        "id": "qy3Yxp-TEG_X",
-        "outputId": "c99d90de-2bee-40d4-c649-73c53f2a9b51",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qy3Yxp-TEG_X",
+        "outputId": "c99d90de-2bee-40d4-c649-73c53f2a9b51"
       },
       "execution_count": 31,
       "outputs": [
@@ -2133,12 +2133,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "sF7y-BQKEllo",
-        "outputId": "da42496b-b33b-4f9e-d0ad-f6d282548c07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 607
-        }
+        },
+        "id": "sF7y-BQKEllo",
+        "outputId": "da42496b-b33b-4f9e-d0ad-f6d282548c07"
       },
       "execution_count": 33,
       "outputs": [
@@ -2165,9 +2165,149 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## Introducción\n",
+        "El objetivo de este análisis es evaluar las cuatro tiendas disponibles como (Tienda 1, Tienda 2, Tienda 3 y Tienda 4) con base en diversos factores clave que influyen en su desempeño comercial. Estos factores incluyen los ingresos totales, las categorías de productos más y menos vendidas, las calificaciones promedio de los clientes, los productos más y menos vendidos, y el costo promedio de envío. A partir de estos datos, se determinará cuál tienda ofrece las mejores condiciones para ser adquirida por el Sr. Juan, considerando tanto sus fortalezas como sus debilidades."
+      ],
       "metadata": {
         "id": "pCVzPVpYG28m"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Ingresos Totales: Los ingresos totales de cada tienda se calcularon sumando el precio de venta de todos los productos vendidos. Los resultados fueron los siguientes.\n",
+        "\n",
+        "\n",
+        "*    La tienda 1 tiene un ingreso total de: 1150880400.0\n",
+        "*    La tienda 2 tiene un ingreso total de: 1116343500.0\n",
+        "*    La tienda 3 tiene un ingreso total de: 1098019600.0\n",
+        "*    La tienda 4 tiene un ingreso total de: 1038375700.0\n",
+        "---\n",
+        "\n",
+        "Gráfico : Se utilizó un gráfico de barras para comparar los ingresos totales de las tiendas. La Tienda 1 destacó como la que genera mayores ingresos, mientras que la Tienda 4 mostró los ingresos más bajos.\n",
+        "\n",
+        "Interpretación : A una mayor generación de ingresos indica una mayor capacidad de la tienda para atraer clientes y vender productos de alto valor. Esto es un factor crucial a favor de la Tienda 1.\n"
+      ],
+      "metadata": {
+        "id": "Etqw652JM8m2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Categorías de Productos Más y Menos Vendidas:\n",
+        "Se analizaron las categorías de productos más y menos vendidas en cada tienda. Los resultados muestran.\n",
+        "\n",
+        "\n",
+        "\n",
+        "> Categoría más vendida :\n",
+        "*   Tienda 1: Muebles\t(465)\n",
+        "*   Tienda 2: Muebles\t(442)\n",
+        "*   Tienda 3: Muebles\t(499)\n",
+        "*   Tienda 4: Muebles\t(480)\n",
+        "\n",
+        "\n",
+        "> Categoría menos vendida:\n",
+        "*   Tienda 1: Artículos para el hogar\t171\n",
+        "*   Tienda 2: Artículos para el hogar\t181\n",
+        "*   Tienda 3: Instrumentos musicales\t177\n",
+        "*   Tienda 4: Instrumentos musicales\t170\n",
+        "\n",
+        "Gráfico : Un gráfico de barras agrupadas mostró la distribución de ventas por categoría. La Tienda 3 destacó al tener una demanda sólida en la categoría de Muebles, que suele ser un segmento rentable debido a su margen de ganancia.\n",
+        "\n",
+        "Interpretación : La diversificación de categorías y la presencia de productos de alto margen son ventajas importantes. La Tienda 3 tiene una categoría líder clara (Muebles), lo que sugiere un posicionamiento sólido en el mercado.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "doEJ2hO2Q8aX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Calificaciones Promedio de los Clientes\n",
+        "Se calculó el promedio de las calificaciones de los clientes para cada tienda:\n",
+        "\n",
+        "* Tienda 1 : 3.977\n",
+        "* Tienda 2 : 4.037\n",
+        "* Tienda 3 : 4.048\n",
+        "* Tienda 4 : 3.996\n",
+        "\n",
+        "Gráfico : Un gráfico de barras mostró la tendencia de las calificaciones promedio. La Tienda 3 obtuvo la calificación más alta, lo que refleja una excelente experiencia del cliente.\n",
+        "\n",
+        "Interpretación : Las calificaciones altas indican satisfacción del cliente, lo que puede traducirse en lealtad y recomendaciones positivas. La Tienda 3 sobresale en este aspecto."
+      ],
+      "metadata": {
+        "id": "zEiB3UPfU-_9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Productos Más y Menos Vendidos\n",
+        "Se identificaron los productos más y menos vendidos en cada tienda:\n",
+        "\n",
+        "Producto más vendido :\n",
+        "* Tienda 1: Armario 60\n",
+        "* Tienda 2: Libro \"Iniciando en programación\"  65\n",
+        "* Tienda 3: Kit de bancas 57\n",
+        "* Tienda 4: Cama box  62\n",
+        "\n",
+        "Producto menos vendido :\n",
+        "\n",
+        "* Tienda 1: Auriculares con micrófono 33\n",
+        "* Tienda 2: Juego de mesa  43\n",
+        "* Tienda 3: Bloques de construcción  56\n",
+        "* Tienda 4: Guitarra eléctrica  47\n",
+        "\n",
+        "Gráfico : Un gráfico de dispersión resaltó los productos más y menos vendidos. La Tienda 2 mostró un producto estrella (Iniciando en programación) con ventas significativamente superiores al resto.\n",
+        "\n",
+        "Interpretación : Un producto estrella puede impulsar las ventas generales y atraer a más clientes. La Tienda 2 tiene un producto claro que lidera el mercado."
+      ],
+      "metadata": {
+        "id": "1FBUP5wsYMZz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. Costo Promedio de Envío\n",
+        "Se calculó el costo promedio de envío para cada tienda:\n",
+        "\n",
+        "* El costo promedio de envío de la tienda 1 es: 26018.61\n",
+        "* El costo promedio de envío de la tienda 2 es: 25216.236\n",
+        "* El costo promedio de envío de la tienda 3 es: 24805.68\n",
+        "* El costo promedio de envío de la tienda 4 es: 23459.457\n",
+        "\n",
+        "Gráfico : Un gráfico de área mostró la evolución del costo promedio de envío. La Tienda 1 tiene el costo más alto, pero esto puede estar justificado por la naturaleza de sus productos (muebles grandes y pesados).\n",
+        "\n",
+        "Interpretación : Aunque el costo de envío es más alto, la rentabilidad de ingreso total de los productos vendidos en la Tienda 1 compensa este gasto."
+      ],
+      "metadata": {
+        "id": "UHQw55Dfcxfd"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Conclusión\n",
+        "\n",
+        "Durante este análisis, hemos evaluado los datos de las cuatro tiendas de Alura Store (Tienda 1, Tienda 2, Tienda 3 y Tienda 4) en función de varios factores clave: ingresos totales , categorías de productos más y menos vendidas , calificaciones promedio de los clientes , productos más y menos vendidos y costo promedio de envío . El objetivo era identificar la tienda menos eficiente para que el Sr. Juan pueda venderla y destinar sus recursos a un nuevo emprendimiento.\n",
+        "\n",
+        "Tras analizar estos factores, llegamos a la siguiente recomendación :\n",
+        "El Sr. Juan debería vender la Tienda 4.\n",
+        "\n",
+        "# Recomendación\n",
+        "La Tienda 4 es la opción más adecuada para ser vendida debido a su bajo rendimiento en comparación con las demás tiendas. Sus ingresos son los más bajos, carece de un producto estrella claro y no destaca en satisfacción del cliente ni en categorías de productos rentables.\n",
+        "Al vender la Tienda 4, el Sr. Juan podrá enfocarse en las otras tiendas, que tienen mejores ingresos, productos más competitivos y una mayor satisfacción del cliente. Este enfoque estratégico permitirá maximizar el éxito de su nuevo emprendimiento y garantizar un uso más eficiente de sus recurso"
+      ],
+      "metadata": {
+        "id": "WpclcqLXfRfF"
       }
     }
   ]
